feat: add multiple task responsibilities v2
